--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,8 @@ address {
 .header {
   border-bottom: 1px solid #e7e9fc;
   align-items: center;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-logo-blue {
   font-family: "Raleway", sans-serif;
@@ -93,6 +95,9 @@ address {
 .header-menu-options:first-child:focus {
   color: #404bbf;
 }
+.header-menu-options:first-child:current {
+  color: #404bbf;
+}
 .header-menu-options {
   font-family: roboto;
   font-weight: 500;
@@ -105,6 +110,20 @@ address {
   gap: 40px;
   margin-right: 0;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-menu-options.current {
+  position: relative;
+}
+.header-menu-options.current::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 .trea-options-menu {
   display: flex;
@@ -128,6 +147,7 @@ address {
   font-style: normal;
   color: #434455;
   margin-left: auto;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-details:first-child:focus {
   color: #404bbf;
