--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,10 @@ address {
   padding-top: 24px;
   padding-bottom: 24px;
 }
+.picture-people-office {
+  background: linear-gradient(rgba(2e2F42), rgba(2e2F42));
+  max-width: 1440px;
+}
 .button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
