--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,8 @@ address {
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
-  background-position: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .header {
   padding-top: 24px;
