--- a/css/styles.css
+++ b/css/styles.css
@@ -157,20 +157,20 @@ address {
 }
 /* -------- section 1 -----------*/
 .order-message {
-  background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  background-color: linear-gradient(rgba(#2e2f42), rgba(#2e2f42));
 }
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
 }
-.picture-people-office {
+/* .picture-people-office {
   background-color: linear-gradient(rgba(#2e2f42), rgba(#2e2f42));
-}
+} */
 .button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
