--- a/css/styles.css
+++ b/css/styles.css
@@ -162,15 +162,14 @@ address {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  background-color: linear-gradient(rgba(#2e2f42), rgba(#2e2f42));
 }
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
 }
-/* .picture-people-office {
+.picture-people-office {
   background-color: linear-gradient(rgba(#2e2f42), rgba(#2e2f42));
-} */
+}
 .button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -205,6 +204,7 @@ address {
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 48px;
+  padding-top: 123px;
 }
 .hover-button .button {
   cursor: pointer;
