--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,9 @@ address {
 }
 .picture-people-office {
   background-color: linear-gradient(rgba(#2e2f42), rgba(#2e2f42));
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .button {
   font-family: "Roboto", sans-serif;
