--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,7 @@ address {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text-solution {
   font-family: roboto;
