--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ address {
 }
 .header-menu-options.current {
   position: relative;
+  color: #404bbf;
 }
 .header-menu-options.current::after {
   content: "";
@@ -158,7 +159,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office\ 1.jpg);
+    url(../images/people-office.jpg);
   margin-left: auto;
   margin-right: auto;
 }
