--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ address {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text-solution {
   font-family: roboto;
@@ -261,6 +261,20 @@ address {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
+}
+.icon-antena-first {
+  display: flex;
+  color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  padding-top: 100px;
+  padding-right: 24px;
+  padding-bottom: 100px;
+  padding-left: 24px;
+  margin-right: auto;
+  margin-left: auto;
 }
 /* -------setion 3  ------- */
 .our-team {
