style.css  file

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,13 +262,20 @@ address {
   letter-spacing: 0.02em;
   color: #434455;
 }
-.icon-antena-first {
+.box-for-icons {
   display: flex;
-  color: #f4f4fd;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
   height: 112px;
+  margin-bottom: 8px;
+}
+.icon-antena-first {
+  display: flex;
   padding-top: 100px;
   padding-right: 24px;
   padding-bottom: 100px;
