--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,15 @@ address {
   background-color: #ffffff;
   gap: 24px;
 }
+.list-social-media {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.li-social-media {
+  width: 40px;
+  height: 40px;
+}
 .picture {
   display: block;
 }
