--- a/css/styles.css
+++ b/css/styles.css
@@ -367,8 +367,17 @@ address {
   width: 40px;
   height: 40px;
 }
+.social-link {
+  width: 100%;
+}
 .picture {
   display: block;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* --------section 4--------- */
 .section-four-container {
