--- a/css/styles.css
+++ b/css/styles.css
@@ -356,9 +356,6 @@ address {
   gap: 24px;
 }
 .cosial-media-container {
-  padding: 32px 0;
-}
-.list-social-media {
   display: flex;
   justify-content: center;
   gap: 24px;
@@ -369,6 +366,12 @@ address {
 }
 .social-link {
   width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .picture {
   display: block;
