--- a/css/styles.css
+++ b/css/styles.css
@@ -373,14 +373,19 @@ address {
   align-items: center;
   justify-content: center;
 }
+.icon-social-media {
+  width: 16;
+  height: 16;
+  fill: #f4f4fd;
+}
 .picture {
   display: block;
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 /* --------section 4--------- */
 .section-four-container {
