--- a/css/styles.css
+++ b/css/styles.css
@@ -386,9 +386,9 @@ address {
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  /* display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
 }
 /* --------section 4--------- */
 .section-four-container {
