--- a/css/styles.css
+++ b/css/styles.css
@@ -384,7 +384,7 @@ address {
 .icon-social-media:focus {
   background-color: #404bbf;
 }
-.picture {
+/* .picture {
   display: block;
   height: 100%;
   background-color: #4d5ae5;
@@ -392,7 +392,7 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 /* --------section 4--------- */
 .section-four-container {
   padding-top: 120px;
