--- a/css/styles.css
+++ b/css/styles.css
@@ -384,15 +384,7 @@ address {
 .icon-social-media:focus {
   background-color: #404bbf;
 }
-/* .picture {
-  display: block;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+
 /* --------section 4--------- */
 .section-four-container {
   padding-top: 120px;
@@ -415,6 +407,22 @@ address {
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
+}
+.tumba {
+  position: relative;
+}
+.new-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-wrap {
   font-weight: 500;
