--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,6 @@ address {
   background-color: #4d5ae5;
   height: 100%;
   width: 100%;
-  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-wrap {
@@ -453,7 +452,9 @@ address {
   margin-bottom: 72px;
 }
 .li-our-portfolio {
+  background-color: #fff;
   width: calc((100% - 48px) / 3);
+  position: relative;
 }
 .li-our-portfolio:hover {
   transform: translateY(0%);
