--- a/css/styles.css
+++ b/css/styles.css
@@ -408,9 +408,6 @@ address {
   flex-wrap: wrap;
   gap: 48px 24px;
 }
-/* .list-our-portfolio:hover {
-  transform: translateY(0%);
-} */
 
 .new-text {
   position: absolute;
@@ -424,7 +421,11 @@ address {
   background-color: #4d5ae5;
   height: 100%;
   width: 100%;
+  transform: translateY(0%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.new-text:hover {
+  transform: translateY(0%);
 }
 .portfolio-wrap {
   font-weight: 500;
