--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,7 @@ address {
   margin-bottom: 8px;
 }
 .card-content-profesion {
-  /* display: flex; */
+  display: flex;
   flex-wrap: wrap;
   font-weight: 400;
   font-size: 16px;
