--- a/css/styles.css
+++ b/css/styles.css
@@ -423,7 +423,7 @@ address {
   height: 100%;
   width: 100%;
   transform: translateY(0%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-color-wrapper {
   position: relative;
@@ -460,7 +460,9 @@ address {
   background-color: #fff;
   width: calc((100% - 48px) / 3);
 }
-
+.li-our-portfolio:hover .new-text {
+  transform: translateY(0);
+}
 .image-div {
   position: relative;
   overflow: hidden;
