--- a/css/styles.css
+++ b/css/styles.css
@@ -526,3 +526,10 @@ address {
   color: #f4f4fd;
   max-width: 264px;
 }
+.social-media-footer {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
