--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,8 @@ address {
 }
 .li-our-portfolio:hover .new-text {
   transform: translateY(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .thumba {
   position: relative;
