--- a/css/styles.css
+++ b/css/styles.css
@@ -540,3 +540,13 @@ address {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+.container-two {
+  padding: 0 15px;
+  margin: 0 auto;
+  padding: 32px 16px;
+  border-top: none;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+  text-align: center;
+}
