--- a/css/styles.css
+++ b/css/styles.css
@@ -538,15 +538,9 @@ address {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: #ffffff;
 }
 .container-two {
-  padding: 0 15px;
-  margin: 0 auto;
-  padding: 32px 16px;
-  border-top: none;
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-  text-align: center;
+  display: flex;
+  align-items: baseline;
 }
