style.css  file

--- a/css/styles.css
+++ b/css/styles.css
@@ -539,6 +539,7 @@ address {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-bottom: 16px;
 }
 .container-two {
   display: flex;
