--- a/css/styles.css
+++ b/css/styles.css
@@ -378,8 +378,8 @@ address {
 .icon-social-media {
   fill: #f4f4fd;
 }
-.icon-social-media.transition {
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.icon-social-media {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover,
 .social-link:focus {
