--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ address {
 .image-color-wrapper {
   position: relative;
 }
-.new-text:hover {
+.new-tex.hover {
   transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -550,6 +550,8 @@ address {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+}
+.container-one {
 }
 .container-two {
   display: flex;
