--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,9 @@ address {
   width: 40px;
   height: 40px;
 }
+.li-social-media {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .social-link-footer {
   width: 100%;
   height: 100%;
@@ -575,8 +578,8 @@ address {
   align-items: center;
   justify-content: center;
 }
-.social-link-footer.focus,
-.social-link-footer.hover {
+.social-link-footer.hover,
+.social-link-footer.focus {
   background-color: #31d0aa;
 }
 .icon-social-media-footer {
