--- a/css/styles.css
+++ b/css/styles.css
@@ -363,8 +363,8 @@ address {
   height: 40px;
 }
 
-.li-social-media:transition {
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.li-social-media {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link {
   width: 100%;
