--- a/css/styles.css
+++ b/css/styles.css
@@ -363,7 +363,7 @@ address {
   height: 40px;
 }
 
-.li-social-media {
+.social-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link {
@@ -378,9 +378,9 @@ address {
 .icon-social-media {
   fill: #f4f4fd;
 }
-.icon-social-media {
+/* .icon-social-media {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 .social-link:hover,
 .social-link:focus {
   background-color: #404bbf;
@@ -567,7 +567,7 @@ address {
   width: 40px;
   height: 40px;
 }
-.li-social-media {
+.social-link-footer {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link-footer {
